--- a/config/storage.yml
+++ b/config/storage.yml
@@ -5,23 +5,14 @@ test:
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
-<<<<<<<<< saved version
   
 amazon:
   service: S3
-  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
-  region: <%= ENV['AWS_REGION'] %>
-  bucket: <%= ENV['AWS_BUCKET'] %>
-
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
-
+  access_key_id: <%= ENV['AKIAUS3OU4FJ62EIT7GS'] %>
+  secret_access_key: <%= ENV['47QmYFKJXWrXI24zeYHP4XVVkNi2v4jEGh3Kax2d'] %>
+  region: <%= ENV['region=us-east-2'] %>
+  bucket: <%= ENV['rawat7540'] %>
+  
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
